# cranelift-lang

./: Cargo.toml  README.md  bruh.sh  example-input  example-input.txt  hello  hello.s  hello_world.s  out.txt  sum.bc  sum.ll
src/: backend.rs  frontend.rs  lib.rs  main.rs  middle.rs  middleend.rs  temp.rs
src/frontend/: ast.rs  mod.rs
src/middleend/: binary.rs  call.rs  mod.rs  value.rs
