[package]
name = "cranelift-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.1"
colored = "2.0.0"
tracing = "0.1.37"
libc = "0.2.147"
tracing-subscriber = { version = "0.3.17", features = ["std","fmt"] }
linked-syntax-tree = { git = "https://github.com/JonathanWoollett-Light/linked-syntax-tree", rev = "183e6d69a666594ee9c73143a7faee8ee853b6ef" }